Now can build as library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,15 +4,14 @@ project(levelizer)
 # Variables
 ############################################################
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(CMAKE_BUILD_TYPE Debug)
 
 set(LVL_SRC_DIR ${CMAKE_SOURCE_DIR}/src)
+set(LVL_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/)
 ############################################################
 
 # Project sources
 ############################################################
 set(LVL_SOURCES 
-  ${LVL_SRC_DIR}/main.cpp
   ${LVL_SRC_DIR}/lexer.cpp
   ${LVL_SRC_DIR}/parser.cpp
   ${LVL_SRC_DIR}/level.cpp
@@ -22,12 +21,17 @@ set(LVL_SOURCES
 
 # Compiling and linking
 ############################################################
-add_executable(${PROJECT_NAME} ${LVL_SOURCES})
-
-file(COPY levels DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+add_library(${PROJECT_NAME} ${CMAKE_BUILD_TYPE} ${LVL_SOURCES})
 
 target_compile_options(${PROJECT_NAME} PRIVATE -lm)
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 
-target_include_directories(${PROJECT_NAME} BEFORE PUBLIC ${LVL_SRC_DIR})
+target_include_directories(${PROJECT_NAME} BEFORE PUBLIC ${LVL_HEADER_DIR}/levelizer)
+
+# Install the library in the correct place
+install(TARGETS ${PROJECT_NAME} 
+        RUNTIME DESTINATION bin
+        LIBRARY DESTINATION lib 
+        ARCHIVE DESTINATION lib)
+install(DIRECTORY ${LVL_HEADER_DIR} DESTINATION include)
 ############################################################
